--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^10.0.1",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
     "framer-motion": "^12.19.1",
+    "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.522.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-spring": "^10.0.1",
     "three": "^0.177.0"
   },
   "devDependencies": {
