--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
     "aos": "^2.3.4",
-    "framer-motion": "^12.19.1",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.522.0",
@@ -26,8 +26,10 @@
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
+    "react-masonry-css": "^1.0.16",
     "react-spring": "^10.0.1",
-    "three": "^0.177.0"
+    "three": "^0.177.0",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
