--- a/public/manifest.json
+++ b/public/manifest.json
@@ -39,6 +39,6 @@
     }
   ],
   "categories": ["business", "construction", "services"],
-  "keywords": ["construction", "building", "Kerala", "industrial", "commercial", "steel fabrication"],
+  "keywords": ["CI Associates", "construction", "building", "Kerala", "Bangalore", "Bengaluru", "Karnataka", "industrial", "commercial", "steel fabrication", "construction company", "Kochi", "South India", "civil works", "interior fit-outs", "structural steel", "building contractors", "construction contractors", "premier construction", "CI Associates construction", "best construction company", "top construction Kerala", "top construction Bangalore", "construction company Bangalore", "building contractors Bangalore"],
   "dir": "ltr"
 }
